[package]
name = "lnd_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
getrandom = "0.2.8"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt"] }

